# clang-format-wheel

./: .gitattributes  .gitignore  .pre-commit-hooks.yaml  .readthedocs.yml  CMakeLists.txt  COPYING.md  MANIFEST.in  README.md  TODO.md  build_clang.template  clang-format_version.cmake  clang-format_version.txt  host_actions.py  pyproject.toml  requirements-dev.txt  setup.cfg  setup.py
.github/workflows/: release.yaml  release.yml
clang-format/: __init__.py  _version.py
clang_format/: __init__.py
doc/: conf.py  index.rst
python-pkg/: MANIFEST.in  setup.py
python-pkg/clang_format/: __init__.py
test/: helloworld.cc  helloworld_format.cc  test_clang_format.py
