[build-system]
requires = ["setuptools>=42", "wheel", "scikit-build", "cmake>=3.16", "ninja; platform_system!='Windows'"]

[tool.cibuildwheel]
# Super-verbose output for debugging purpose
build-verbosity = 3

# We restrict ourselves to CPython 3.8 and then repair the wheels to be
# independent of the Python version - I have not found a different solution
# within cibuildwheel to achieve this.
build = "cp38-*"

# Testing commands for our wheels
before-test = [
    "git config --global user.name Name",
    "git config --global user.email foo@bar.com"
]
test-requires = ["pytest", "pytest-git"]
test-command = "pytest {package}/test"